// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`editor operation regression workflow: add video → add image → move clip → trim 1`] = `
{
  "tracks": [
    {
      "clips": [
        {
          "assetId": "v1",
          "clipKind": "video",
          "durationMs": 4000,
          "id": "clip-0",
          "inMs": 0,
          "outMs": 4000,
          "startMs": 0,
        },
        {
          "assetId": "i1",
          "clipKind": "image",
          "durationMs": 3000,
          "id": "clip-1",
          "inMs": 0,
          "outMs": 3000,
          "startMs": 6000,
        },
      ],
      "id": "track-0",
    },
  ],
}
`;

exports[`editor operation regression workflow: multi-track with text overlay 1`] = `
{
  "tracks": [
    {
      "clips": [
        {
          "assetId": "v1",
          "clipKind": "video",
          "durationMs": 5000,
          "id": "clip-0",
          "inMs": 0,
          "outMs": 5000,
          "startMs": 0,
        },
      ],
      "id": "track-0",
    },
    {
      "clips": [
        {
          "assetId": "",
          "clipKind": "title",
          "durationMs": 2000,
          "id": "clip-1",
          "inMs": 0,
          "outMs": 2000,
          "startMs": 1000,
          "text": {
            "backgroundColor": "black@0.5",
            "color": "white",
            "fontSize": 24,
            "value": "Title",
          },
        },
        {
          "assetId": "",
          "clipKind": "title",
          "durationMs": 1000,
          "id": "clip-2",
          "inMs": 0,
          "outMs": 1000,
          "startMs": 4000,
          "text": {
            "color": "yellow",
            "fontSize": 16,
            "value": "Subtitle",
          },
        },
      ],
      "id": "track-1",
    },
  ],
}
`;

exports[`editor operation regression workflow: cross-track move 1`] = `
{
  "tracks": [
    {
      "clips": [
        {
          "assetId": "v1",
          "clipKind": "video",
          "durationMs": 5000,
          "id": "clip-0",
          "inMs": 0,
          "outMs": 5000,
          "startMs": 0,
        },
      ],
      "id": "track-0",
    },
    {
      "clips": [
        {
          "assetId": "",
          "clipKind": "title",
          "durationMs": 1000,
          "id": "clip-1",
          "inMs": 0,
          "outMs": 1000,
          "startMs": 0,
          "text": {
            "color": "white",
            "fontSize": 20,
            "value": "Overlay",
          },
        },
        {
          "assetId": "i1",
          "clipKind": "image",
          "durationMs": 3000,
          "id": "clip-2",
          "inMs": 0,
          "outMs": 3000,
          "startMs": 2000,
        },
      ],
      "id": "track-1",
    },
  ],
}
`;

exports[`editor operation regression workflow: duration change clamps existing clips 1`] = `
{
  "tracks": [
    {
      "clips": [
        {
          "assetId": "v1",
          "clipKind": "video",
          "durationMs": 3000,
          "id": "clip-0",
          "inMs": 0,
          "outMs": 3000,
          "startMs": 0,
        },
      ],
      "id": "track-0",
    },
  ],
}
`;

exports[`editor operation regression workflow: update clip properties 1`] = `
{
  "tracks": [
    {
      "clips": [
        {
          "assetId": "v1",
          "clipKind": "video",
          "crop": {
            "height": 70,
            "width": 140,
            "x": 10,
            "y": 10,
          },
          "durationMs": 5000,
          "id": "clip-0",
          "inMs": 0,
          "outMs": 5000,
          "startMs": 0,
          "transform": {
            "rotation": 45,
            "scale": 1.5,
            "x": 20,
            "y": -10,
          },
          "volume": 0.5,
        },
      ],
      "id": "track-0",
    },
  ],
}
`;

exports[`editor operation regression workflow: add and remove clips 1`] = `
{
  "tracks": [
    {
      "clips": [
        {
          "assetId": "v1",
          "clipKind": "video",
          "durationMs": 5000,
          "id": "clip-0",
          "inMs": 0,
          "outMs": 5000,
          "startMs": 0,
        },
        {
          "assetId": "a1",
          "clipKind": "audio",
          "durationMs": 2000,
          "id": "clip-1",
          "inMs": 0,
          "outMs": 2000,
          "startMs": 8000,
        },
      ],
      "id": "track-0",
    },
  ],
}
`;

exports[`editor operation regression workflow: left trim adjusts startMs and inMs 1`] = `
{
  "tracks": [
    {
      "clips": [
        {
          "assetId": "v1",
          "clipKind": "video",
          "durationMs": 4000,
          "id": "clip-0",
          "inMs": 1000,
          "outMs": 5000,
          "startMs": 1000,
        },
      ],
      "id": "track-0",
    },
  ],
}
`;

exports[`editor operation regression workflow: left and right trim combined 1`] = `
{
  "tracks": [
    {
      "clips": [
        {
          "assetId": "v1",
          "clipKind": "video",
          "durationMs": 3000,
          "id": "clip-0",
          "inMs": 500,
          "outMs": 3500,
          "startMs": 500,
        },
      ],
      "id": "track-0",
    },
  ],
}
`;

exports[`editor operation regression workflow: update blendMode 1`] = `
{
  "tracks": [
    {
      "clips": [
        {
          "assetId": "v1",
          "blendMode": "cover",
          "clipKind": "video",
          "durationMs": 5000,
          "id": "clip-0",
          "inMs": 0,
          "outMs": 5000,
          "startMs": 0,
        },
      ],
      "id": "track-0",
    },
  ],
}
`;

exports[`editor operation regression workflow: overlap snap on same-track move 1`] = `
{
  "tracks": [
    {
      "clips": [
        {
          "assetId": "v1",
          "clipKind": "video",
          "durationMs": 5000,
          "id": "clip-0",
          "inMs": 0,
          "outMs": 5000,
          "startMs": 0,
        },
        {
          "assetId": "i1",
          "clipKind": "image",
          "durationMs": 3000,
          "id": "clip-1",
          "inMs": 0,
          "outMs": 3000,
          "startMs": 5000,
        },
      ],
      "id": "track-0",
    },
  ],
}
`;

exports[`editor operation regression workflow: remove track 1`] = `
{
  "tracks": [
    {
      "clips": [
        {
          "assetId": "v1",
          "clipKind": "video",
          "durationMs": 5000,
          "id": "clip-0",
          "inMs": 0,
          "outMs": 5000,
          "startMs": 0,
        },
      ],
      "id": "track-0",
    },
  ],
}
`;

exports[`editor operation regression workflow: text with fontFamily and align 1`] = `
{
  "tracks": [
    {
      "clips": [
        {
          "assetId": "",
          "clipKind": "title",
          "durationMs": 3000,
          "id": "clip-0",
          "inMs": 0,
          "outMs": 3000,
          "startMs": 0,
          "text": {
            "align": "right",
            "backgroundColor": "#000000@0.8",
            "color": "#ff0000",
            "fontFamily": "Noto Sans JP",
            "fontSize": 32,
            "value": "Styled Title",
          },
        },
      ],
      "id": "track-0",
    },
  ],
}
`;

exports[`editor operation regression workflow: add clip to specific target track 1`] = `
{
  "tracks": [
    {
      "clips": [
        {
          "assetId": "v1",
          "clipKind": "video",
          "durationMs": 5000,
          "id": "clip-0",
          "inMs": 0,
          "outMs": 5000,
          "startMs": 0,
        },
        {
          "assetId": "i1",
          "clipKind": "image",
          "durationMs": 3000,
          "id": "clip-1",
          "inMs": 0,
          "outMs": 3000,
          "startMs": 5000,
        },
      ],
      "id": "track-0",
    },
    {
      "clips": [
        {
          "assetId": "",
          "clipKind": "title",
          "durationMs": 2000,
          "id": "clip-2",
          "inMs": 0,
          "outMs": 2000,
          "startMs": 0,
          "text": {
            "color": "white",
            "fontSize": 16,
            "value": "T",
          },
        },
      ],
      "id": "track-1",
    },
  ],
}
`;

exports[`editor operation regression workflow: audio clip with volume 1`] = `
{
  "tracks": [
    {
      "clips": [
        {
          "assetId": "a1",
          "clipKind": "audio",
          "durationMs": 10000,
          "id": "clip-0",
          "inMs": 0,
          "outMs": 10000,
          "startMs": 0,
          "volume": 0.3,
        },
      ],
      "id": "track-0",
    },
  ],
}
`;

exports[`editor operation regression workflow: empty-asset video clip 1`] = `
{
  "tracks": [
    {
      "clips": [
        {
          "assetId": "",
          "clipKind": "video",
          "durationMs": 3000,
          "id": "clip-0",
          "inMs": 0,
          "outMs": 3000,
          "startMs": 0,
        },
      ],
      "id": "track-0",
    },
  ],
}
`;

exports[`editor operation regression workflow: empty-asset clip alongside normal clips 1`] = `
{
  "tracks": [
    {
      "clips": [
        {
          "assetId": "v1",
          "clipKind": "video",
          "durationMs": 5000,
          "id": "clip-0",
          "inMs": 0,
          "outMs": 5000,
          "startMs": 0,
        },
      ],
      "id": "track-0",
    },
    {
      "clips": [
        {
          "assetId": "",
          "clipKind": "image",
          "durationMs": 2000,
          "id": "clip-1",
          "inMs": 0,
          "outMs": 2000,
          "startMs": 1000,
        },
      ],
      "id": "track-1",
    },
  ],
}
`;

exports[`editor operation regression workflow: move empty-asset clip 1`] = `
{
  "tracks": [
    {
      "clips": [
        {
          "assetId": "",
          "clipKind": "video",
          "durationMs": 2000,
          "id": "clip-0",
          "inMs": 0,
          "outMs": 2000,
          "startMs": 3000,
        },
      ],
      "id": "track-0",
    },
  ],
}
`;

exports[`editor operation regression workflow: trim empty-asset clip 1`] = `
{
  "tracks": [
    {
      "clips": [
        {
          "assetId": "",
          "clipKind": "video",
          "durationMs": 2000,
          "id": "clip-0",
          "inMs": 0,
          "outMs": 2000,
          "startMs": 0,
        },
      ],
      "id": "track-0",
    },
  ],
}
`;

exports[`editor operation regression workflow: remove empty-asset clip removes empty track 1`] = `
{
  "tracks": [],
}
`;

exports[`editor operation regression workflow: update empty-asset clip properties 1`] = `
{
  "tracks": [
    {
      "clips": [
        {
          "assetId": "",
          "clipKind": "video",
          "durationMs": 3000,
          "id": "clip-0",
          "inMs": 0,
          "outMs": 3000,
          "startMs": 0,
          "transform": {
            "rotation": 30,
            "scale": 1.2,
            "x": 10,
            "y": -5,
          },
        },
      ],
      "id": "track-0",
    },
  ],
}
`;

exports[`editor operation regression workflow: clamp empty-asset clip to duration 1`] = `
{
  "tracks": [
    {
      "clips": [
        {
          "assetId": "",
          "clipKind": "video",
          "durationMs": 3000,
          "id": "clip-0",
          "inMs": 0,
          "outMs": 3000,
          "startMs": 0,
        },
      ],
      "id": "track-0",
    },
  ],
}
`;

exports[`editor operation regression workflow: addEmptyClip to existing track 1`] = `
{
  "tracks": [
    {
      "clips": [
        {
          "assetId": "v1",
          "clipKind": "video",
          "durationMs": 5000,
          "id": "clip-0",
          "inMs": 0,
          "outMs": 5000,
          "startMs": 0,
        },
        {
          "assetId": "",
          "clipKind": "video",
          "durationMs": 3000,
          "id": "clip-1",
          "inMs": 0,
          "outMs": 3000,
          "startMs": 6000,
        },
      ],
      "id": "track-0",
    },
  ],
}
`;

exports[`editor operation regression workflow: addEmptyClip creates new track when no target 1`] = `
{
  "tracks": [
    {
      "clips": [
        {
          "assetId": "",
          "clipKind": "image",
          "durationMs": 3000,
          "id": "clip-0",
          "inMs": 0,
          "outMs": 3000,
          "startMs": 1000,
        },
      ],
      "id": "track-0",
    },
  ],
}
`;

exports[`editor operation regression workflow: addEmptyClip with title sets text 1`] = `
{
  "tracks": [
    {
      "clips": [
        {
          "assetId": "",
          "clipKind": "title",
          "durationMs": 3000,
          "id": "clip-0",
          "inMs": 0,
          "outMs": 3000,
          "startMs": 0,
          "text": {
            "backgroundColor": "black",
            "color": "white",
            "fontSize": 48,
            "value": "Text",
          },
        },
      ],
      "id": "track-0",
    },
  ],
}
`;

exports[`editor operation regression workflow: addEmptyClip clamped by maxDuration 1`] = `
{
  "tracks": [
    {
      "clips": [
        {
          "assetId": "",
          "clipKind": "video",
          "durationMs": 1000,
          "id": "clip-0",
          "inMs": 0,
          "outMs": 1000,
          "startMs": 9000,
        },
      ],
      "id": "track-0",
    },
  ],
}
`;

exports[`editor operation regression workflow: addEmptyClip then move 1`] = `
{
  "tracks": [
    {
      "clips": [
        {
          "assetId": "",
          "clipKind": "video",
          "durationMs": 3000,
          "id": "clip-0",
          "inMs": 0,
          "outMs": 3000,
          "startMs": 5000,
        },
      ],
      "id": "track-0",
    },
  ],
}
`;

exports[`editor operation regression workflow: addEmptyClip multiple kinds on same track 1`] = `
{
  "tracks": [
    {
      "clips": [
        {
          "assetId": "",
          "clipKind": "video",
          "durationMs": 2000,
          "id": "clip-0",
          "inMs": 0,
          "outMs": 2000,
          "startMs": 0,
        },
        {
          "assetId": "",
          "clipKind": "image",
          "durationMs": 2000,
          "id": "clip-1",
          "inMs": 0,
          "outMs": 2000,
          "startMs": 3000,
        },
        {
          "assetId": "",
          "clipKind": "audio",
          "durationMs": 2000,
          "id": "clip-2",
          "inMs": 0,
          "outMs": 2000,
          "startMs": 6000,
        },
      ],
      "id": "track-0",
    },
  ],
}
`;
